--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,14 @@ branches:
 
 before_install:
   - source .travis/setenv_lua.sh
+  - luarocks install luacov
   - luarocks install tapered
 
 script:
   - lua -lluacov awesome-tests.lua
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+
 notifications:
   email:
     on_success: change
