And away we go...

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - lua -lluacov awesome-tests.lua
 
 after_success:
-
+  - bash <(curl -s https://codecov.io/bash)
 notifications:
   email:
     on_success: change
