--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
   - lua -lluacov awesome-tests.lua
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - bash -c "$(git log -1 --pretty=%B | tail -1)"
